src/gestaoflex/pfm-manager/prd/k8s-deployment.yaml
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: gflex
  name: pfm-manager
  labels:
    app: pfm-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfm-manager
  template:
    metadata:
      labels:
        app: pfm-manager
    spec:
      containers:
        - name: pfm-manager-container
          image: gestaoflex/pfm-manager:1.0.3
          ports:
            - containerPort: 3303
