src/gestaoflex/pfm-manager/prd/k8s-service.yaml
# Service
kind: Service
apiVersion: v1
metadata:
  name: pfm-manager
  namespace: gflex
spec:
  selector:
    app: pfm-manager
  ports:
    - name: server
      port: 3303
      targetPort: 3303
